--- a/code.ipynb
+++ b/code.ipynb
@@ -89,6 +89,7 @@
    ],
    "source": [
     "# USA Yearly change for Temperature\n",
+    "\n",
     "url = \"http://climatedataapi.worldbank.org/climateweb/rest/v1/country/cru/tas/year/USA\"\n",
     "request = requests.get(url).json()\n",
     "# pprint(request)\n",
@@ -448,14 +449,20 @@
     }
    ],
    "source": [
-    "# USA mavg Precipitation(1980-1999) data\n",
-    "rain_url = url = \"http://climatedataapi.worldbank.org/climateweb/rest/v1/country/mavg/pr/1980/1999/USA\"\n",
+    "# Brazil Yearly change for Temperature\n",
+    "url = \"http://climatedataapi.worldbank.org/climateweb/rest/v1/country/cru/tas/year/AUS\"\n",
+    "request = requests.get(url).json()\n",
+    "# pprint(request)\n",
+    "len(request)\n",
+    "year = []\n",
+    "data = []\n",
+    "for x in range(len(request)):\n",
+    "    year.append(request[x]['year'])\n",
+    "    data.append(request[x]['data'])\n",
+    "year_df = pd.DataFrame({\"Year\": year,\n",
+    "                       \"Temperature\": data})\n",
     "\n",
-    "# Request\n",
-    "rain_response = requests.get(rain_url).json()\n",
-    "\n",
-    "# Print\n",
-    "pprint(rain_response)"
+    "year_df.head()"
    ]
   },
   {
